full-moon/tests/cases/fail/parser/table-7/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/table-7
---
error[ast]: unexpected token `[`. [ (expected an expression after `[`)
  ┌─ source.lua:2:2
  │
2 │     [until] = true,
  │     ^

error[ast]: unexpected token `until`. until (unexpected token, this needs to be a statement)
  ┌─ source.lua:2:3
  │
2 │     [until] = true,
  │      ^^^^^


